force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelopeRecipientStatus__c/fields/Apttus_DocuApi__BatchJobId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__BatchJobId__c</fullName>
    <description>Batch job id will be used to trigger extension package task history update(System use only field do not add to layout)</description>
    <inlineHelpText>Batch job id will be used to trigger extension package task history update(System use only field do not add to layout)</inlineHelpText>
    <label>Batch Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>