force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelopeRecipientStatus__c/fields/Apttus_DocuApi__Company__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__Company__c</fullName>
    <description>Recipient Company name from DocuSign Tab/Tag</description>
    <inlineHelpText>Recipient Company name from DocuSign Tab/Tag</inlineHelpText>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>