force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelopeRecipientStatus__c/fields/Apttus_DocuApi__DeclinedReason__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DeclinedReason__c</fullName>
    <description>eSignature decline reason</description>
    <inlineHelpText>eSignature decline reason</inlineHelpText>
    <label>Declined Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>