force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelopeRecipientStatus__c/fields/Apttus_DocuApi__DocusignUpperEnvelopeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocusignUpperEnvelopeId__c</fullName>
    <description>Store envelope id in upper case, used in webhook integration.</description>
    <formula>UPPER(Apttus_DocuApi__DocuSignEnvelopeId__r.Apttus_DocuApi__EnvelopeId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Store envelope id in upper case, used in webhook integration.</inlineHelpText>
    <label>Docusign Envelope Id (Upper)</label>
    <type>Text</type>
</CustomField>