force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelopeRecipientStatus__c/fields/Apttus_DocuApi__Email__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__Email__c</fullName>
    <description>Recipient Email ID</description>
    <inlineHelpText>Recipient Email ID</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>