force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelopeRecipientStatus__c/fields/Apttus_DocuApi__EnvelopeParentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__EnvelopeParentId__c</fullName>
    <description>Reference field for the DocuSign Envelope linked to parent SFDC object id</description>
    <inlineHelpText>Reference field for the DocuSign Envelope linked to parent  SFDC  object id</inlineHelpText>
    <label>Envelope Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>