force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelopeRecipientStatus__c/fields/Apttus_DocuApi__EnvelopeRecipientStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__EnvelopeRecipientStatus__c</fullName>
    <description>System internal use only. Make limited SOQL query find the current recipient status</description>
    <formula>Apttus_DocuApi__DocuSignEnvelopeId__r.Apttus_DocuApi__EnvelopeId__c   &amp; &apos;_&apos; &amp; Apttus_DocuApi__Email__c  &amp; &apos;_&apos; &amp; Apttus_DocuApi__RoleName__c  &amp; &apos;_&apos; &amp; Apttus_DocuApi__RoutingOrder__c  &amp; &apos;_&apos; &amp; Apttus_DocuApi__Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>System internal use only. Make limited SOQL query find the current recipient status</inlineHelpText>
    <label>Envelope Recipient Status</label>
    <type>Text</type>
</CustomField>