force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelopeRecipientStatus__c/fields/Apttus_DocuApi__RecipientName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__RecipientName__c</fullName>
    <description>Name of the Recipient from DocuSign (sent as part of the Envelope)</description>
    <inlineHelpText>Name of the Recipient from DocuSign (sent as part of the Envelope)</inlineHelpText>
    <label>Recipient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>