force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelopeRecipientStatus__c/fields/Apttus_DocuApi__RecipientTab__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__RecipientTab__c</fullName>
    <description>Recipient Tab from DocuSign</description>
    <inlineHelpText>Recipient Tab from DocuSign</inlineHelpText>
    <label>RecipientTab</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>