force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelopeRecipientStatus__c/fields/Apttus_DocuApi__RoleName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__RoleName__c</fullName>
    <description>Recipient Role Name</description>
    <inlineHelpText>Recipient Role Name</inlineHelpText>
    <label>Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>