force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelopeRecipientStatus__c/fields/Apttus_DocuApi__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__Status__c</fullName>
    <description>Envelope Recipient Status</description>
    <inlineHelpText>Envelope Recipient Status</inlineHelpText>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>