force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelopeRecipientStatus__c/fields/Apttus_DocuApi__Title__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__Title__c</fullName>
    <description>Recipient Title name from DocuSign Tab/Tag</description>
    <inlineHelpText>Recipient Title name from DocuSign Tab/Tag</inlineHelpText>
    <label>Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>