force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelopeRecipientStatus__c/fields/Apttus_DocuApi__WebhookStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__WebhookStatus__c</fullName>
    <description>Update status when webhook enabled.</description>
    <inlineHelpText>Update status when webhook enabled.</inlineHelpText>
    <label>Webhook Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>