force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelopeRecipientStatus__c/listViews/Apttus_DocuApi__All.listView-meta.xml
<ListView>
    <fullName>Apttus_DocuApi__All</fullName>
    <columns>Apttus_DocuApi__RecipientName__c</columns>
    <columns>Apttus_DocuApi__Email__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Apttus_DocuApi__Status__c</columns>
    <columns>Apttus_DocuApi__RoutingOrder__c</columns>
    <columns>Apttus_DocuApi__RoleName__c</columns>
    <columns>Apttus_DocuApi__DocuSignEnvelopeId__c</columns>
    <columns>Apttus_DocuApi__EnvelopeRecipientStatus__c</columns>
    <columns>Apttus_DocuApi__Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>