force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelopeRecipientStatus__c/listViews/Apttus_DocuApi__All1.listView-meta.xml
<ListView>
    <fullName>Apttus_DocuApi__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>